--- a/index.html
+++ b/index.html
@@ -92,46 +92,42 @@
       
       <div class="exercise" id="introduction">
       <h2>Introduction</h2>
-      <div class="instructions"><p>In this series of exercises, you will use <em>block-based programming</em>, 
-        similar to what you used on code.org, to create javascript that dynamically modifies the html on a web page 
-        ("dynamically" means that as the program executes, the initial html will be modified).
+      <div class="instructions"><p>In this course, you will use <em>block-based programming</em>, 
+        like on code.org, to create JavaScript that changes the html on a web page.
       </p>
-      <p>In this "Introduction", there is nothing for you to do, only information. You can move to the first exercise whenever you're ready.</p>
+      <p>This "Introduction" has no tasks, only helpful information. Go to the first exercise whenever you're ready.</p>
       <ul>
         <li>
-          Static html can be written in the html textarea ("static" means this is the original state, 
-          before the program).
+          Static html can be written in the html textarea. "Static" means unchanging. In this case, we mean the original state, 
+          before the program changes anything).
         </li>
         <li>
-          Code to modify the html can be written with blocks.
+          Use blocks to create code that changes the html.
         </li>
         <li>
-          Clicking "run" will place the html in the space just below the textarea and execute 
+          Click "run" to place the html in the space below the textarea and execute 
           the generated code.
         </li>
         <li>
-          These exercises assume you are familiar with using the block-based programming environment, 
-          based on having done the code.org exercises. You should be familiar with if
-          and loop blocks.
+          These exercises assume you have tried block based programming already. Do the <a href="https://studio.code.org/s/course3">code.org course</a> before you start. You should at least have done the lessons up to Conditionals and While Loops.
         </li>
         <li>
-          There are some differences with code.org. In particular, you are free to move to the next exercise 
-          whenever you feel ready. At some point, grey checkmarks will indicate that your current code doesn't
-          appear to solve all the instructions, and green checkmarks will indicate that it does.
+          Unlike code.org, in CYF Blocks you can go to the next exercise when you feel ready.
+        </li> 
+          Grey checkmarks show that your current code doesn't solve the instruction. Green checkmarks show that it does.
         </li>
         <li>
-          The blocks directly translate to javascript code. You can look at the resulting code in the 
-          generated javascript textarea. It's not intended that you be able to understand this code at this point in the curriculum.
+          The blocks create JavaScript code. You can view the result in the 
+          "Generated code" textarea. You are not expected to understand this code yet. (It's interesting to look at, though!)
         </li>
         <li>
-          The end goal is to be able to copy paste the generated code into a
-          single .js file and add it, and the appropriate html, to the an html page 
-          created during the fundamentals module.
+          The goal is to use the generated code in your own project. 
+          You will copy paste this code into a single .js file and add it, with html and css, 
+          to your course project.
         </li>
         <li>
-          The way the blocks work (and the code they generate) is deliberately similar to what you will learn
-          in the upcoming javascript modules. There are also some differences, intended to make it easier as
-          a first programming experience.
+          The way the blocks work (and the code they generate) is very like the code you will learn in the long course. 
+          There are also some differences that make the code easier for new learners.
         </li>
       </ul>
       <h3>Definitions</h3>
@@ -434,7 +430,7 @@
       </script>
       <div class="instructions">
       <p>
-        Javascript is often "event-driven". This means it is run in when the user interacts with the page (clicking, typing, etc.). Let's make it so every time we (as a "user") click on an "add an apple" button, it adds an apple to the list.
+        JavaScript is often "event-driven". This means it is run in when the user interacts with the page (clicking, typing, etc.). Let's make it so every time we (as a "user") click on an "add an apple" button, it adds an apple to the list.
       </p>
         <ol>
             <li>Start with an empty unordered html list (<code>&lt;ul&gt;</code>) and a button to add apples to the list (<code>&lt;button&gt;</code>) in the static html.
@@ -713,7 +709,7 @@
       <h2>Arrays: Mad Libs revisited</h2>
       <div class="instructions">
       <p>When we did the first Mad Libs exercise, we weren't able to make our own list of words to choose from but could only pick a category (noun, adjective, verb). 
-        We will now introduce a data structure called an <b>Array</b>, that represents a list of data (typically numbers or texts) in javascript. 
+        We will now introduce a data structure called an <b>Array</b>, that represents a list of data (typically numbers or texts) in JavaScript. 
         They can be created and used from the "Arrays" menu. Let's create our own list of words to select from.
       </p>
       <ol>
