Fix up a few references to IDs

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <ol>
             <li>Let's start with an html list with a single apple in the "Static html" 
                 <ol>
-                    <li>Note the list has an id ("list") so that we can refer to it from our program.</li>
+                    <li>Note the list has an id ("fruits") so that we can refer to it from our program.</li>
                     <li>for example: <code class="start_code">&lt;ul id="fruits"&gt;<br>&lt;li&gt;Apple&lt;/li&gt;<br>&lt;/ul&gt;</code></li>
                 </ol>
             <li>Add one more fruit dynamically
@@ -800,7 +800,7 @@
         Another use for an array is when we want to do the same thing with each element in an array (for example, create a <code>&lt;li&gt;</code>).
       </p>
       <ol>
-          <li>Start with an empty unordered html list with the id "list" (<code class="start_code">&lt;ul id="fruits"&gt;&lt;/ul&gt;</code>) in the static html.</li>
+          <li>Start with an empty unordered html list with the id "fruits" (<code class="start_code">&lt;ul id="fruits"&gt;&lt;/ul&gt;</code>) in the static html.</li>
           <li>Add an <span class="blockname">"at the start"</span> block</li>
           <li>We'll now create an array of fruits and assign it to a variable <ol>
               <li>From the "Arrays" menu, add a <span class="blockname">"Set ... to, create array with"</span> block to the <span class="blockname">"at the start"</span> block</li>
@@ -1067,7 +1067,7 @@
       <div class="instructions">
       <p>Using the blocks from the previous exercise and a different kind of loop gives us an alternative way to loop through all the items of an array. Let's see a case where it might be useful.</p>
       <ol>
-          <li>Start with an empty unordered html list with the id "list" (<code class="start_code">&lt;ul id="fruits"&gt;&lt;/ul&gt;</code>) in the static html.</li>
+          <li>Start with an empty unordered html list with the id "fruits" (<code class="start_code">&lt;ul id="fruits"&gt;&lt;/ul&gt;</code>) in the static html.</li>
           <li>As with before, create an array called "fruits" of your favourite fruit inside an <span class="blockname">"at the start"</span> block.</li>
           <li>Instead of the <span class="blockname">"for each item in array"</span> block, we will use the <span class="blockname">"repeat while"</span> block and the <span class="blockname">"... is empty"</span> block together<ol>
               <li>As usual, add a <span class="blockname">"find the element with id"</span> block to find the html list</li>
