--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </style>
   </head>
   <body>
-    <script src="https://unpkg.com/blockly/blockly.min.js"></script>
+    <script src="https://unpkg.com/blockly@7.20211209.0/blockly.min.js"></script>
     <script src="blockly-dom.js"></script>
     <script src="blockly-cyf.js"></script>
     <script src="jsoncrush.js"></script>
