--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       });
     </script>
       <div class="instructions" >
-        <zero-md src="exercises/change_text.md" ></zero-md>
+        <zero-md src="exercises/changing_text.md" ></zero-md>
       </div>
        <xml class="toolbox" style="display: none">
           <category name="Values" colour='%{BKY_TEXTS_HUE}'>
