move the add fruits exercise to separate md file

--- a/index.html
+++ b/index.html
@@ -210,31 +210,7 @@
         });
       </script>
       <div class="instructions">
-      <p>
-        Not only can we modify existing html elements, we can also create new ones and set their text and properties.
-      </p>
-        <ol>
-            <li>Let's start with an html list with a single apple in the "Static html" 
-                <ol>
-                    <li>Note the list has an id ("list") so that we can refer to it from our program.</li>
-                    <li>for example: <code class="start_code">&lt;ul id="list"&gt;<br>&lt;li&gt;Apple&lt;/li&gt;<br>&lt;/ul&gt;</code></li>
-                </ol>
-            <li>Add one more fruit dynamically
-                <ol>
-                    <li>Add an <span class="blockname">"at the start"</span> block</li>
-                    <li>Inside this block, add a <span class="blockname">"find the element with id"</span> block using the id for the ul element (<code>list</code>)</li>
-                    <li>Inside this block, add a <span class="blockname">"create a new ... element"</span> block and select "&lt;li&gt;"</li>
-                    <li>Inside this block, add a <span class="blockname">"set the text content"</span> block and set the value to "Banana"</li>
-                    <li id="exercise_add_fruit_1">Click "run" to check the output looks like
-                        <ul style="background-color: azure;">
-                            <li>Apple</li>
-                            <li>Banana</li>
-                        </ul>
-                    </li>
-                </ol>
-            </li>
-            <li id="exercise_add_fruit_2">Repeat the process above to add two more of your favourite fruit (hint: you can add multiple <span class="blockname">"create a new ... element"</span> blocks one after the other)</li> 
-        </ol>
+        <zero-md src="exercises/add_fruit.md"></zero-md>
        </div>
        <xml class="toolbox" style="display: none">
           <category name="Values" colour='%{BKY_TEXTS_HUE}'>
