initial draft of wording for todo list

--- a/index.html
+++ b/index.html
@@ -345,19 +345,7 @@
       <div class="exercise" id="exercise_todo_list">
         <h2>Buttons, inputs and clicks: a todo list</h2>
         <div class="instructions">
-        <p>
-          We're going to create a list of things to do.
-        </p>
-        <ol>
-            <li>Start with an empty list, an input, and a button "add Todo Item" in the static html. <code class="start_code">&lt;p&gt;Things to do:&lt;/p&gt;<br>&lt;ul id="list"&gt;&lt;/ul&gt;<br>&lt;input id="text" /&gt;<br>&lt;button id="button"&gt;add Todo Item&lt;/button&gt;</code></li>
-            <li>When the button is clicked, we are going to do two things: get the value of the input box and add a new <code>&lt;li&gt;</code> with that value to the list. To do the visible outcome first, we're going to do these in reverse order.</li>
-                <ol>
-                    <li>Add an <span class="blockname">"when the element with id ... is clicked"</span> block.</li>
-                    <li>First find the list element (id <code>list</code>) and add a new <code>&lt;li&gt;</code> with an arbitrary text value (for example "do cyf homework"). Check that this works.</li>
-                    <li>Now, replace the arbitrary content of the new <code>&lt;li&gt;</code> with the value of the input, using the <span class="blockname">"get the value of &lt;input&gt; with id"</span> block.</li>
-                </ol>
-            </li>
-        </ol>
+          <zero-md src="exercises/todo_list.md"></zero-md>
        </div>
        <xml class="toolbox" style="display: none">
           <category name="Values" colour='%{BKY_TEXTS_HUE}'>
@@ -383,8 +371,7 @@
          <category name="Variables" colour="330" custom="VARIABLE"></category>
         </xml>
       </div>
-
-      
+    
       <div class="exercise" id="exercise_button_consolidation">
         <h2>Buttons and clicks consolidation</h2>
         <div class="instructions">
