initial draft wording for the button consolidation md

--- a/index.html
+++ b/index.html
@@ -314,15 +314,7 @@
       <div class="exercise" id="exercise_button_consolidation">
         <h2>Buttons and clicks consolidation</h2>
         <div class="instructions">
-        <p>
-          Anything that we could do previously as soon as run is clicked, we can now do as a response to clicking buttons or other elements in the static html.
-        </p>
-        <ol>
-            <li id="exercise_button_consolidation_4">Place the sentence from the first exercise in the static html, but this time with &lt;button&gt; elements around the words to be filled in (<code class="start_code">&lt;p&gt;The &lt;button id="noun1"&gt;dog&lt;/button&gt; &lt;button id="verb"&gt;saw&lt;/button&gt; the &lt;button id="adjective"&gt;white&lt;/button&gt; &lt;button id="noun2"&gt;cat&lt;/button&gt;&lt;/p&gt;</code>). Make it so each button's text gets set to a random word when it is clicked?</li>
-            <li id="exercise_button_consolidation_1">Place two buttons ("day mode" and "night mode") and an html list in the static html. Can you add blocks so that when the buttons are clicked, the html list changes to "day mode" (dark text on a light background) and "night mode" (light text on a dark background)?</li>
-            <li id="exercise_button_consolidation_2">Place a button in the static html. Can you add blocks so it changes colour when it is clicked?</li>
-            <li id="exercise_button_consolidation_3">Place an image in the static html. Can you add blocks so it changes when it is clicked?</li>
-        </ol>
+          <zero-md src="exercises/button_consolidation.md"></zero-md>
        </div>
        <xml class="toolbox" style="display: none">
           <category name="Values" colour='%{BKY_TEXTS_HUE}'>
