initial move of html over to md

--- a/index.html
+++ b/index.html
@@ -448,27 +448,7 @@
       <div class="exercise" id="exercise_arrays_random">
       <h2>Arrays: Mad Libs revisited</h2>
       <div class="instructions">
-      <p>When we did the first Mad Libs exercise, we weren't able to make our own list of words to choose from but could only pick a category (noun, adjective, verb). 
-        We will now introduce a data structure called an <b>Array</b>, that represents a list of data (typically numbers or texts) in JavaScript. 
-        They can be created and used from the "Arrays" menu. Let's create our own list of words to select from.
-      </p>
-      <ol>
-          <li>Start with a Mad Libs sentence similar to before (<code class="start_code">&lt;p&gt;The &lt;u id="noun"&gt;man&lt;/u&gt; &lt;u id="verb"&gt;saw&lt;/u&gt; the &lt;u id="adjective"&gt;white&lt;/u&gt; &lt;u id="animal"&gt;cat&lt;/u&gt;&lt;/p&gt;</code></li>
-          <li>Add an <span class="blockname">"at the start"</span> block</li>
-          <li>We'll now create an array of animals and assign it to a variable <ol>
-              <li>From the "Arrays" menu, add a <span class="blockname">"Set ... to, create array with"</span> block to the <span class="blockname">"at the start"</span> block</li>
-              <li>Rename the variable <span class="variablename">"array"</span> to "animals"</li>
-              <li>Note, a variable can be used to store any value. In previous exercises, we stored a number. Here we are storing an array, but otherwise it's exactly the same concept.</li>
-              <li>Add at least 3 animal text values to this array</li>
-              <li>Note: You can click on the gear icon at the top left of the <span class="blockname">"create array with"</span> block to add and remove slots for values</li>
-          </ol></li>
-          <li>Let's set the text of the <code>&lt;u id="animal"&gt;</code> to a random animal.<ol>
-              <li>You already know how to do most of the steps (find the element with id animal, set its text content)</li>
-              <li>The thing we will do differently is to set the text content to a <span class="blockname">get a random item from array</span> block, selecting the "animals" array in the dropdown.</li>
-              <li>Click "run" several times to check you get a random animal from your array each time.</li>
-          </ol></li>
-          <li>Create additional arrays from which to select random words for each slot to be filled and share the result with your cohort.</li>
-      </ol>
+        <zero-md src="exercises/arrays_random.md"></zero-md>
       </div>
       <xml class="toolbox" style="display: none">
         <category name="Values" colour='%{BKY_TEXTS_HUE}'>
