link instructions back to exercises md

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         });
       </script>
       <div class="instructions">
-        <zero-md src="exercises/"></zero-md>
+        <zero-md src="exercises/arrays_foreach.md"></zero-md>
       </div>
       <xml class="toolbox" style="display: none">
         <category name="Values" colour='%{BKY_TEXTS_HUE}'>
